# wheel_odom

./: CMakeLists.txt  README.md  package.xml
launch/: odom.launch
msg/: steeringAngle.msg  wheelSpeeds.msg
src/: wheelOdomNode.cpp  wheel_pub.cpp
src/WheelOdom/: Bicycle.cpp  Bicycle.h  FrontWheel.cpp  FrontWheel.h  MecanumWheel.cpp  MecanumWheel.h  OmniWheel.cpp  OmniWheel.h  RearWheel.cpp  RearWheel.h  Tricycle.cpp  Tricycle.h  WheelOdom.cpp  WheelOdom.h  WheelOdomFactory.cpp  WheelOdomFactory.h
src/WheelOdom2/: WheelOdom2.cpp  WheelOdom2.h
src/WheelOdometryROS/: WheelOdometryROS.cpp  WheelOdometryROS.h
src/type/: pose2d.h
